--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Alex6323 <Al3k5@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = { version = "2.32.0", features = ["yaml"] }
 
 [dev-dependencies]
 criterion = "0.2.8"
